--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
 /*  your css code here. If applicable */
+body{
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #f5f5f5;
+	color: black;
+}
+
+header{
+	width:100%;
+	background-color: #011e29;
+	color: white;
+	text-align: center;
+	padding: 18px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.body{
+	position: relative;
+	
+}
+
+img {
+    height: 120px;
+    width: 200px;
+}
+
+.news-1{
+	text-align: center;
+    width: 222px;
+    padding: 15px;
+    margin-top: 10px;
+    margin-left: 30px;
+    border-radius: 24px;
+    background-color: white;
+}
+
+.latest-news-section{
+	text-align: center;
+    width: 657px;
+    position: absolute;
+    top: -10px;
+    left: 280px;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 24px;
+    background-color: white;
+}
+
